--- a/index.html
+++ b/index.html
@@ -32,20 +32,38 @@
 		window.location.href = url1;
 	}
 	</script>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-darkt ml-2"> <img src="http://www.findtuner.com/images/clients/findtuner/home/SAP-Hybris-white-Logo.png" alt class="img-responsive rounded float-left" height=auto width="200" onclick="reloadPage();">
-		<div class="btn-group dropdown">
-			<button type="button" class="btn btn-info">Проекты Jira + Confluens</button>
-			<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown"> <span class="caret"></span> <span class="sr-only">Toggle Dropdown</span> </button>
+
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark ml-3"> <img src="http://www.findtuner.com/images/clients/findtuner/home/SAP-Hybris-white-Logo.png" alt class="img-responsive rounded float-left" height=auto width="200" onclick="reloadPage();">
+		<div class="btn-group dropdown" style="background-color: #ff3300;">
+			<button type="button" class="btn btn-info">Проекты Jira + Confluense</button>
+			<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown"> <span class="caret"></span> 
+				<span class="sr-only">Toggle Dropdown</span> 
+			</button>
 			<ul class="dropdown-menu" role="menu">
 				<li><a href="https://jira.366.ru/secure/RapidBoard.jspa?rapidView=75&projectKey=WGZ ">WGZ</a></li>
 				<li><a href="https://jira.366.ru/secure/RapidBoard.jspa?rapidView=163&projectKey=W36">W36</a></li>
 				<li><a href="https://jira.366.ru/secure/RapidBoard.jspa?rapidView=147&projectKey=ESEO">ESEO</a></li>
 				<li><a href="https://jira.366.ru/secure/RapidBoard.jspa?rapidView=120&projectKey=HYB">HYB</a></li>
-				<li><a href="https://conf.366.ru/pages/viewpage.action?pageId=21336648">Confluens</a></li>
+				<li><a href="https://conf.366.ru/pages/viewpage.action?pageId=21336648">Confluense</a></li>
 			</ul>
 		</div>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-	</nav> 
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+		</button>
+
+
+		<ul class="navbar-nav mr-auto">
+	    <li class="nav item">
+	    	<a class="nav link" href="http://10.250.212.40/search" target="_blank">
+	    		Graylog
+	    		<span class="sr-only">(current)</span>
+
+	    	</a>
+	    </li> 
+
+
+
+	</nav>
+
 		
 
 
