--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark ml-3"> <img src="http://www.findtuner.com/images/clients/findtuner/home/SAP-Hybris-white-Logo.png" alt class="img-responsive rounded float-left" height=auto width="200" onclick="reloadPage();">
 		<div class="btn-group dropdown" style="background-color: #ff3300;">
-			<button type="button" class="btn btn-info">Проекты Jira + Confluense</button>
-			<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown"> <span class="caret"></span> 
+			<button type="button" class="btn btn-primary">Проекты Jira + Confluense</button>
+			<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> <span class="caret"></span> 
 				<span class="sr-only">Toggle Dropdown</span> 
 			</button>
 			<ul class="dropdown-menu" role="menu">
@@ -52,13 +52,14 @@
 
 
 		<ul class="navbar-nav mr-auto">
-	    <li class="nav item">
-	    	<a class="nav link" href="http://10.250.212.40/search" target="_blank">
-	    		Graylog
-	    		<span class="sr-only">(current)</span>
+			<li class="nav item">
+				<a class="nav link gray-log-link" href="http://10.250.212.40/search" target="_blank">
+					Graylog
+					<span class="sr-only">(current)</span>
 
-	    	</a>
-	    </li> 
+				</a>
+			</li> 
+		</ul>
 
 
 
