added some styles

--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@
 			</li> 
 		</ul>
 
+		<ul class="navbar-nav mr-auto">
+			<li class="nav item">
+				<a class="nav link intra-log-link" href="https://sd.366.ru/login" target="_blank">
+					IntraService
+					<span class="sr-only">(current)</span>
+
+				</a>
+			</li> 
+		</ul>
+
+		<ul class="navbar-nav mr-auto">
+			<li class="nav item">
+				<a class="nav link zabbix-log-link" href="https://monitoring.366.ru/screenconf.php" target="_blank">
+					Zabbix
+					<span class="sr-only">(current)</span>
+
+				</a>
+			</li> 
+		</ul>
+
 
 
 	</nav>
