--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
 			</li> 
 		</ul>
 
+		<ul class="navbar-nav mr-auto">
+			<li class="nav item">
+				<a class="nav link qase-log-link" href="https://app.qase.io/project/A366" target="_blank">
+					Qase.io
+					<span class="sr-only">(current)</span>
+
+				</a>
+			</li> 
+		</ul>
+
 
 
 	</nav>
